[package]
name = "marpa"
version = "0.2.0"
authors = ["Josh Chase <jcjoshuachase@gmail.com>"]
description = "Safe bindings to the libmarpa parsing engine"
license = "MIT"
repository = "https://github.com/Pursuit92/marpa"
documentation = "https://pursuit92.github.io/marpa"
edition = "2018"

[dependencies]
regex = "0.1"
regex-syntax = "0.2"
libmarpa-sys = "0.1"
