[package]
name = "libmarpa-sys"
version = "0.1.3"
authors = ["Josh Robson Chase <josh@robsonchase.com>"]
description = "Low-level bindings to the libmarpa parsing engine"
license = "MIT/Apache-2.0"
repository = "https://github.com/jrobsonchase/marpa"
documentation = "https://docs.rs/libmarpa-sys"
edition = "2018"

[dependencies]
libc = "0.2.47"

[build-dependencies]
autotools = "0.1.3"
