[package]
name = "marpa"
version = "0.2.3"
authors = ["Josh Robson Chase <josh@robsonchase.com>"]
description = "Safe bindings to the libmarpa parsing engine"
license = "MIT/Apache-2.0"
repository = "https://github.com/jrobsonchase/marpa"
documentation = "https://docs.rs/marpa"
edition = "2018"

[dependencies]
regex = "1.1.0"
regex-syntax = "0.6.4"
libmarpa-sys = {path="../libmarpa-sys"}
